fix dashjs controlbar seek bar to grow when extra space is available improve handling of video controller to always be positioned fully over the video content fix bug in films.js that was hardcodign link address where it should have been using an argument fix bug with display of film content thumbs because they were missing some css elements that were only being applied to labels before but films use anchors instead now improve video positioning, size management, aspect ratio especially on mobile make all the film download link css that was previously being hardcoded into css classes update filtering function to support filtering on film content that uses an A tag instead of a label tag to handle UI interaction add content for all of the major films that have been created, including updates to the dunes, valentina ski, various crossift and parkour films of questionable quality

--- a/dashjs/controlbar.css
+++ b/dashjs/controlbar.css
@@ -81,9 +81,13 @@
 }
 
 .video-controller {
+    position: absolute;
     min-height:35px;
     z-index: 2147483646;
     overflow:hidden;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .video-controller-fullscreen {
@@ -204,6 +208,10 @@
     overflow: auto;
     overflow-y: hidden;
     overflow-x: hidden;
+}
+.seekContainer * { 
+  flex-grow: 2;
+  min-width: 4em;
 }
 
 input[type="range"] {
